--- a/src/app/details/details.css
+++ b/src/app/details/details.css
@@ -26,9 +26,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 -20px 20px -20px;
+    margin: -20px -20px 20px -20px;
     position: sticky;
-    top: 60px;
+    top: 65px;
     background-color: var(--g5-color);
     z-index: 999;
     padding: 15px 20px 15px 20px;
@@ -37,6 +37,25 @@
     border-bottom: 1px solid var(--g3-color);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
+}
+
+.details-grid-section{
+  width: 100% !important;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+}
+
+.timeline-sidebar {
+  width: 350px;
+  flex-shrink: 0;
+  border-radius: 8px;
+  padding: 10px;
+  /* max-height: calc(100vh - 200px); */
+  height: 100%;
+  overflow-y: auto;
+  position: sticky;
+  top: 150px;
 }
 
 /* Location Page Sidebar Layout */
