--- a/src/app/details/event-details/event-details.html
+++ b/src/app/details/event-details/event-details.html
@@ -85,7 +85,7 @@
     </div>
 
     <!-- Timeline Sidebar -->
-    <div class="event-timeline-sidebar">
+    <div class="timeline-sidebar">
         <app-timeline
           [events]="filteredEventList"
           [currentEventId]="worldEvent?.id?.toString()"
