--- a/src/app/details/location-details/location-details.html
+++ b/src/app/details/location-details/location-details.html
@@ -63,7 +63,7 @@
         </div>
         
         <!-- Timeline Sidebar -->
-        <div class="location-timeline-sidebar">
+        <div class="timeline-sidebar">
             <app-timeline 
                 [events]="filteredEventList" 
                 [title]="'Events at ' + (worldLocation?.name || '')"
