--- a/src/app/details/story-details/story-details.html
+++ b/src/app/details/story-details/story-details.html
@@ -52,7 +52,7 @@
         </div>
         
         <!-- Timeline Sidebar -->
-        <div class="story-timeline-sidebar">
+        <div class="timeline-sidebar">
             <app-timeline 
                 [events]="filteredEventList" 
                 [title]="'Events in ' + (worldStory?.title || '')"
