--- a/src/app/components/timeline/timeline-event/timeline-event.css
+++ b/src/app/components/timeline/timeline-event/timeline-event.css
@@ -66,7 +66,7 @@
 /* Vertical Timeline Items - Straight up/down layout */
 .timeline-item.vertical {
   position: relative;
-  width: 100%;
+  width: 10rem;
   max-width: 350px;
   margin: 0 auto 20px auto;
   display: block;
