--- a/src/app/details/event-details/event-details.html
+++ b/src/app/details/event-details/event-details.html
@@ -3,9 +3,9 @@
     <button class="delete-button secondary" (click)="deleteEvent()">Delete Event</button>
 </div>
 
-<div class="event-page-layout">
+<div class="page-layout">
     <!-- Main Content Area -->
-    <div class="event-main-content">
+    <div class="main-content">
         <form [formGroup]="applyForm" (submit)="submitApplication()">
             <section class="edit-event-form page-body">
                 <div class="details-section primary-section horizontal-section">
