--- a/src/app/components/relationship-list/relationship-list.css
+++ b/src/app/components/relationship-list/relationship-list.css
@@ -49,16 +49,18 @@
 }
 
 .relationship-grid-container {
-  width: 100%;
+  padding: 10px;
+  /* width: 95%; */
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  /* grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); */
-  gap: 20px;
-  /* width: 100%; */
+  gap: 10px;
   max-height: 400px;
   overflow-y: auto;
+
+  border: 2px solid var(--g4-color);
+  border-radius: 0.5rem;
   scrollbar-width: thin;
-  scrollbar-color: var(--g3-color) var(--g5-color);
+  scrollbar-color: var(--g3-color) transparent;
 }
 
 .relationship-grid-item {
@@ -75,7 +77,7 @@
   padding: 15px;
   border: 1px solid var(--g4-color);
   border-radius: 8px;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   background-color: var(--g5-color);
 }
 
